# pipeline-framework

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: full_csv_extractor_demo.py  simple_pipeline.yml  simple_transformer.py  test_components.py
examples/pipelines/: customer-analytics-pipeline.yaml
scripts/: quick-start.sh
