[project]
name = "pipeline-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
pipeline-core = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/pipeline-core",
    "packages/components/extractors/stages",
    "packages/components/extractors/extractor_sql",
    "packages/components/loaders/loaders_sql",
    "packages/components/transformers/transformer-polars",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
